tests/deploy_errors/pipeline_bad_script/error.txt
Error: 
   10 | create instance passthrough
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Argument `badger` is required, but no defaults are provided in the definition and no final values in the instance
